fixed text overflow bug, many thanks to Erik Heddema

--- a/templates/content/style/default.css
+++ b/templates/content/style/default.css
@@ -250,6 +250,10 @@ h4 {display:block;font-size:90%; font-family:Verdana;}
 	text-decoration: none;
 	color: #0285FF;	
 }
+#item-right{
+    float:left;
+	width: 597px;
+}
 #main-body {
     float:left;
     width:100%;
